[package]
name = "electrum_streaming_client"
version = "0.4.0"
description = "Experimental but sane electrum client by @evanlinjin."
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/bitcoindevkit/electrum_streaming_client"
documentation = "https://docs.rs/electrum_streaming_client"
readme = "README.md"

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version = "0.32", features = ["serde"] }

tokio = { version = "1.44.2", features = ["io-util"],  optional = true }
tokio-util = { version = "0.7.15", features = ["compat"], optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "tokio-util"]
frigate = []

[dev-dependencies]
async-std = "1.13.0"
bdk_testenv = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
